Remove persistent module

--- a/app/design/frontend/base/default/template/checkout/onepage/billing.phtml
+++ b/app/design/frontend/base/default/template/checkout/onepage/billing.phtml
@@ -164,7 +164,7 @@
                         </div>
                     </div>
                 </li>
-                <?= $this->getChildHtml('persistent.remember.me') ?>
+                <?= $this->getChildHtml('remember.me') ?>
                 <?php endif ?>
                 <?php if ($this->isCustomerLoggedIn() && $this->customerHasAddresses()):?>
                     <li class="control">
