--- a/app/design/frontend/base/default/template/customer/form/login.phtml
+++ b/app/design/frontend/base/default/template/customer/form/login.phtml
@@ -67,7 +67,7 @@
                         <li>
                             <a href="<?= $this->getForgotPasswordUrl() ?>" class="f-left"><?= $this->__('Forgot Your Password?') ?></a>
                         </li>
-                        <?= $this->getChildHtml('persistent.remember.me') ?>
+                        <?= $this->getChildHtml('remember.me') ?>
                     </ul>
                 </div>
                 <div class="buttons-set">
