--- a/app/design/frontend/base/default/template/customer/form/register.phtml
+++ b/app/design/frontend/base/default/template/customer/form/register.phtml
@@ -169,7 +169,7 @@
                     </div>
                 </li>
                 <?= $this->getChildHtml('form.additional.info') ?>
-                <?= $this->getChildHtml('persistent.remember.me') ?>
+                <?= $this->getChildHtml('remember.me') ?>
             </ul>
         </div>
         <div class="buttons-set">
