--- a/app/design/frontend/base/default/layout/customer.xml
+++ b/app/design/frontend/base/default/layout/customer.xml
@@ -76,7 +76,9 @@ Layout for customer login page
             <action method="setTemplate"><template>page/1column.phtml</template></action>
         </reference>
         <reference name="content">
-            <block type="customer/form_login" name="customer_form_login" template="customer/form/login.phtml" />
+            <block type="customer/form_login" name="customer_form_login" template="customer/form/login.phtml">
+                <block type="customer/form_remember" name="remember.me" template="customer/form/remember.phtml" />
+            </block>
         </reference>
     </customer_account_login>
 
@@ -113,6 +115,7 @@ New customer registration
         </reference>
         <reference name="content">
             <block type="customer/form_register" name="customer_form_register" template="customer/form/register.phtml">
+                <block type="customer/form_remember" name="remember.me" template="customer/form/remember.phtml" />
                 <block type="page/html_wrapper" name="customer.form.register.fields.before" as="form_fields_before" translate="label">
                     <label>Form Fields Before</label>
                 </block>
