--- a/app/design/frontend/rwd/default/template/page/html/header.phtml
+++ b/app/design/frontend/rwd/default/template/page/html/header.phtml
@@ -22,7 +22,7 @@
 
         <?= $this->getChildHtml('currency_switcher') ?>
 
-        <p class="welcome-msg"><?= $this->getChildHtml('welcome') ?> <?= $this->getChildHtml('accountLinks') ?></p>
+        <p class="welcome-msg"><?= $this->getChildHtml('welcome') ?>
     </div>
 </div>
 
