RWD: Removed slideshow js files and rewrote them in modern CSS + basic vanilla JS, removed jquery/noconflict.js and merged functionality in jquery/jquery-3.7.1.min.js

--- a/app/design/frontend/rwd/default/layout/catalog.xml
+++ b/app/design/frontend/rwd/default/layout/catalog.xml
@@ -165,7 +165,7 @@ Product view
             <action method="addJs"><script>varien/product.js</script></action>
             <action method="addJs"><script>varien/product_options.js</script></action>
             <action method="addJs"><script>varien/configurable.js</script></action>
-            <action method="addItem"><type>skin_js</type><script>js/lib/jquery.elevateZoom-3.0.8.min.js</script></action>
+            <action method="addItem"><type>skin_js</type><script>js/jquery.elevateZoom-3.0.8.min.js</script></action>
             <action method="addItem"><type>js_css</type><name>flatpickr/flatpickr.min.css</name><params/></action>
             <action method="addItem"><type>js</type><name>flatpickr/flatpickr.min.js</name></action>
         </reference>
