Fixes, possibly broke something else, WIP

--- a/app/design/frontend/base/default/template/customer/address/edit.phtml
+++ b/app/design/frontend/base/default/template/customer/address/edit.phtml
@@ -137,6 +137,18 @@
             </li>
         </ul>
     </div>
+    <div class="fieldset">
+        <h2 class="legend"><?php echo $this->__('Other') ?></h2>
+        <ul class="form-list">
+            <?php foreach ($this->getExtraFields() as $_code => $_attribute): ?>
+                <?php $_block = 'eav/widget_'.$_attribute->getFrontendInput() ?>
+                <?php $_element = $this->getLayout()->createBlock($_block)->setData('attribute', $_attribute) ?>
+                <?php if ($_element->isEnabled()): ?>
+                    <li><?php echo $_element->setObject($this->getAddress())->toHtml() ?></li>
+                <?php endif ?>
+            <?php endforeach ?>
+        </ul>
+    </div>
     <div class="buttons-set">
         <p class="required"><?= $this->__('* Required Fields') ?></p>
         <p class="back-link"><a href="<?= $this->escapeUrl($this->getBackUrl()) ?>"><small>&laquo; </small><?= $this->__('Back') ?></a></p>
