--- a/app/design/frontend/base/default/template/checkout/onepage/billing.phtml
+++ b/app/design/frontend/base/default/template/checkout/onepage/billing.phtml
@@ -118,6 +118,15 @@
                         </div>
                     </div>
                 </li>
+
+        <?php foreach ($this->getExtraCustomerAddressFields() as $_code => $_attribute): ?>
+            <?php $_block = 'eav/widget_'.$_attribute->getFrontendInput() ?>
+            <?php $_element = $this->getLayout()->createBlock($_block)->setData('attribute', $_attribute)->setFieldIdFormat('billing:%s')->setFieldNameFormat('billing[%s]') ?>
+            <?php if ($_element->isEnabled()): ?>
+                <li class="register-customer-extra-fields"><?php echo $_element->setObject($this->getExtraFieldsSession())->toHtml() ?></li>
+            <?php endif ?>
+        <?php endforeach ?>
+
                 <?php if(!$this->isCustomerLoggedIn()): ?>
 
         <?php $_dob = $this->getLayout()->createBlock('customer/widget_dob') ?>
@@ -141,7 +150,7 @@
                 <li><?= $this->getTaxvatHtml() ?></li>
             <?php endif ?>
 
-        <?php foreach ($this->extraFields() as $_code => $_attribute): ?>
+        <?php foreach ($this->getExtraCustomerFields() as $_code => $_attribute): ?>
             <?php $_block = 'eav/widget_'.$_attribute->getFrontendInput() ?>
             <?php $_element = $this->getLayout()->createBlock($_block)->setData('attribute', $_attribute)->setFieldIdFormat('billing:%s')->setFieldNameFormat('billing[%s]') ?>
             <?php if ($_element->isEnabled()): ?>
