--- a/app/design/frontend/base/default/template/checkout/onepage/login.phtml
+++ b/app/design/frontend/base/default/template/checkout/onepage/login.phtml
@@ -19,8 +19,8 @@
 ?>
 <?php
 $isRegistrationAllowed = $this->helper('customer')->isRegistrationAllowed();
+$isRedirectRegisterStep = $this->helper('checkout')->isRedirectRegisterStep();
 $isAllowedGuestCheckout = $this->helper('checkout')->isAllowedGuestCheckout($this->getQuote());
-$isCustomerMustBeLogged = $this->helper('checkout')->isCustomerMustBeLogged();
 $isPersistentEnabled = $this->helper('checkout')->isPersistentEnabled();
 ?>
 <?php /* Extensions placeholder */ ?>
@@ -59,17 +59,9 @@ $isPersistentEnabled = $this->helper('checkout')->isPersistentEnabled();
 
         <div class="buttons-set">
             <p class="required">&nbsp;</p>
-            <?php if ($isAllowedGuestCheckout): ?>
-                <button id="onepage-guest-register-button" type="button" class="button" onclick="checkout.setMethod();"><?= $this->__('Continue') ?></button>
-            <?php elseif ($isCustomerMustBeLogged): ?>
-                <button id="onepage-guest-register-button" type="button" class="button" onclick="window.location='<?= $this->helper('checkout/url')->getRegistrationUrl();?>'"><?= $this->__('Register') ?></button>
-            <?php elseif ($isPersistentEnabled): ?>
-                <form action="<?= $this->getUrl('persistent/index/saveMethod') ?>">
-                    <button id="onepage-guest-register-button" type="submit" class="button"><?= $this->__('Register') ?></button>
-                </form>
-            <?php else: ?>
-                <button id="onepage-guest-register-button" type="button" class="button" onclick="checkout.setMethod();"><?= $this->__('Register') ?></button>
-            <?php endif ?>
+            <button id="onepage-guest-register-button" type="button" class="button">
+                <?= $this->__($isAllowedGuestCheckout ? 'Continue' : 'Register') ?>
+            </button>
         </div>
     </div>
     <?php endif ?>
@@ -105,13 +97,14 @@ $isPersistentEnabled = $this->helper('checkout')->isPersistentEnabled();
         </fieldset>
         </form>
         <div class="buttons-set">
-            <button type="submit" class="button" onclick="onepageLogin(this)"><?= $this->__('Login') ?></button>
+            <button id="onepage-login-button" type="submit" class="button"><?= $this->__('Login') ?></button>
         </div>
     </div>
 </div>
 <?php $registerParam = $this->getRequest()->getParam('register') ?>
 <script type="text/javascript">
     const loginForm = new VarienForm('login-form', true);
+
     document.getElementById('login-email').addEventListener('keypress', bindLoginPost);
     document.getElementById('login-password').addEventListener('keypress', bindLoginPost);
     function bindLoginPost(evt) {
@@ -119,10 +112,27 @@ $isPersistentEnabled = $this->helper('checkout')->isPersistentEnabled();
             loginForm.submit();
         }
     }
-    function onepageLogin(button) {
+
+    document.getElementById('onepage-login-button').addEventListener('click', onepageLogin);
+    function onepageLogin() {
         if(loginForm.validator && loginForm.validator.validate()){
-            button.disabled = true;
+            this.disabled = true;
             loginForm.submit();
+        }
+    }
+
+    document.getElementById('onepage-guest-register-button').addEventListener('click', onepageRegisterOrGuest);
+    function onepageRegisterOrGuest() {
+        if (document.getElementById('login:register').checked) {
+            <?php if ($isRedirectRegisterStep): ?>
+                window.location = '<?= $this->quoteEscape($this->helper('checkout/url')->getRegistrationUrl()) ?>';
+            <?php elseif($isPersistentEnabled): ?>
+                window.location = '<?= $this->quoteEscape($this->getUrl('persistent/index/saveMethod')) ?>';
+            <?php else: ?>
+                checkout.setMethod();
+            <?php endif; ?>
+        } else if(document.getElementById('login:guest').checked) {
+            checkout.setMethod();
         }
     }
 
