RWD: white foreground color in header-language-background

--- a/public/skin/frontend/rwd/default/css/styles.css
+++ b/public/skin/frontend/rwd/default/css/styles.css
@@ -2796,7 +2796,7 @@ body {
 }
 .header-language-background,
 .header-language-background a {
-  color: #e6e6e6;
+  color: white;
 }
 
 @media only screen and (max-width: 770px) {
