--- a/app/design/frontend/rwd/default/template/page/html/header.phtml
+++ b/app/design/frontend/rwd/default/template/page/html/header.phtml
@@ -28,7 +28,7 @@
 
 <header id="header" class="page-header">
     <div class="page-header-container">
-        <a class="logo" href="<?= $this->getUrl('') ?>">
+        <a class="logo" href="<?= $this->getUrl('') ?>" title="<?= $this->__('Go to Home Page') ?>">
             <img src="<?= $this->getLogoSrc() ?>" alt="<?= $this->getLogoAlt() ?>" />
         </a>
 
