--- a/app/design/frontend/rwd/default/template/customer/form/edit.phtml
+++ b/app/design/frontend/rwd/default/template/customer/form/edit.phtml
@@ -42,12 +42,15 @@
             <li><?= $_gender->setGender($this->getCustomer()->getGender())->toHtml() ?></li>
         <?php endif ?>
 
-        <?php foreach ($this->getExtraFields() as $_code => $_attribute): ?>
-            <?php $_block = 'eav/widget_'.$_attribute->getFrontendInput() ?>
-            <?php $_element = $this->getLayout()->createBlock($_block)->setData('attribute', $_attribute) ?>
-            <?php if ($_element->isEnabled()): ?>
-                <li><?php echo $_element->setObject($this->getCustomer())->toHtml() ?></li>
-            <?php endif ?>
+        <?php foreach ($this->getGroupedFields() as $_group => $_attributes): ?>
+            <h2 class="legend"><?= $this->__($_group) ?></h2>
+            <?php foreach ($_attributes as $_code => $_attribute): ?>
+                <?php $_block = 'eav/widget_'.$_attribute->getFrontendInput() ?>
+                <?php $_element = $this->getLayout()->createBlock($_block)->setData('attribute', $_attribute) ?>
+                <?php if ($_element->isEnabled()): ?>
+                    <li><?php echo $_element->setObject($this->getCustomer())->toHtml() ?></li>
+                <?php endif ?>
+            <?php endforeach ?>
         <?php endforeach ?>
 
             <li>
